// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cart;

// folder in which all the generated go files will be stored
option go_package = "github.com/MatteoBollecchino/Distributed_Programming_Project/ecommerce/proto/cart;cart";

// CART ITEM
message CartItem{
    string item_id = 1;
    uint32 quantity = 2;
}

// CART
message Cart {
    string username = 1;
    repeated CartItem items = 2;
}

// ADD ITEM TO CART
message AddItemToCartRequest {
    string username = 1;
    CartItem cart_item = 2;
}

message AddItemToCartResponse {
    string error_message = 1;
}

// REMOVE ITEM FROM CART
message RemoveItemFromCartRequest {
    string username = 1;
    string item_id = 2;
}

message RemoveItemFromCartResponse {
    string error_message = 1;
}

// UPDATE ITEM QUANTITY
message UpdateItemQuantityRequest {
    string username = 1;
    string item_id = 2;
    uint32 quantity = 3;
}

message UpdateItemQuantityResponse {
    string error_message = 1;
}

// LISTING CART
message GetCartRequest {
    string username = 1;
}

message GetCartResponse {
    Cart cart = 1;
    string error_message = 2;
}

// CLEARING THE CART
message ClearCartRequest {
    string username = 1;
}

message ClearCartResponse {
    string error_message = 1;
}

// Calculate the total price of the cart
message CalculateTotalPriceRequest {
    string username = 1;
}

message CalculateTotalPriceResponse {
    double total_price = 1;
    string error_message = 2;
}


// SERVICES
service CartService {
    rpc AddItemToCart(AddItemToCartRequest) returns (AddItemToCartResponse);
    rpc RemoveItemFromCart(RemoveItemFromCartRequest) returns (RemoveItemFromCartResponse);
    rpc UpdateItemQuantity(UpdateItemQuantityRequest) returns (UpdateItemQuantityResponse);
    rpc GetCart(GetCartRequest) returns (GetCartResponse);
    rpc ClearCart(ClearCartRequest) returns (ClearCartResponse);
    rpc CalculateTotalPrice(CalculateTotalPriceRequest) returns (CalculateTotalPriceResponse);
}
